Corrected paragraph aligning
Please report an issue if something looks wrong in some page. Haven't
tested all rules in all pages.

--- a/public/assets/css/custom-1.0.css
+++ b/public/assets/css/custom-1.0.css
@@ -91,7 +91,10 @@ footer a:hover, footer a:focus
 p
 {
   font-family: 'Quicksand';
-  text-align: justify
+}
+section p /*Body paragraphs (mostly)*/
+{
+  text-align: justify;
 }
 div.panel h3
 {
